WIP: Build with GCC on OSX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,10 @@ if(ENABLE_ARCUS)
     # this, which defaults to OFF. We need to force this option to ON instead.
     set(protobuf_MODULE_COMPATIBLE ON CACHE "" INTERNAL FORCE)
     find_package(Protobuf 3.0.0 REQUIRED)
+    include_directories(${Protobuf_INCLUDE_DIRS})
+    message("Protobuf_PROTOC_EXECUTABLE = ${Protobuf_PROTOC_EXECUTABLE}")
+    message("Protobuf_INCLUDE_DIR  = ${Protobuf_INCLUDE_DIR}")
+    message("Protobuf_INCLUDE_DIRS = ${Protobuf_INCLUDE_DIRS}")
     find_package(Arcus REQUIRED)
     add_definitions(-DARCUS)
 endif()
