--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: registry.gitlab.com/ultimaker/cura/cura-build-environment:centos7
 
 stages:
   - build
+  - deploy
 
 build and test linux:
   stage: build
@@ -14,3 +15,45 @@ build and test linux:
   artifacts:
     paths:
       - build
+
+build-mingw64:
+  stage: build
+  image: debian:buster
+  tags:
+    - cura
+    - docker
+    - linux
+  before_script:
+    - apt-get update
+    - apt-get upgrade -y
+    - apt-get install -y cmake gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 curl git
+    - update-alternatives --set x86_64-w64-mingw32-gcc /usr/bin/x86_64-w64-mingw32-gcc-posix
+    - update-alternatives --set x86_64-w64-mingw32-g++ /usr/bin/x86_64-w64-mingw32-g++-posix
+    - curl -1sLf 'https://dl.cloudsmith.io/public/ultimaker/cura-public/cfg/setup/bash.deb.sh' | bash
+    - apt-get install -y cura-libprotobuf-mingw-w64-dev=3.9.2-1 cura-libprotobuf-dev=3.9.2-1 cura-libarcus-mingw-w64-dev=4.5.0-1
+  script:
+    - docker/build-mingw64.sh
+  artifacts:
+    paths:
+      - build
+
+publish-packages:
+  stage: deploy
+  image: debian:buster
+  tags:
+    - cura
+    - docker
+    - linux
+  before_script:
+    - apt-get update
+    - apt-get upgrade -y
+    - apt-get install -y python3 python3-pip
+    - python3 -m pip install cloudsmith-cli
+  script:
+    - docker/publish-packages.sh
+  only:
+    - master
+  artifacts:
+    paths:
+      - build/*.deb
+      - build/*.zip
