--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 #Copyright (c) 2019 Ultimaker B.V.
 #CuraEngine is released under the terms of the AGPLv3 or higher.
 
-project(CuraEngine)
-
 cmake_minimum_required(VERSION 3.6.0)
+
+project(CuraEngine)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
@@ -369,4 +369,13 @@ endif()
 # Installing CuraEngine.
 include(GNUInstallDirs)
 install(TARGETS CuraEngine DESTINATION ${CMAKE_INSTALL_BINDIR})
+if (CMAKE_CROSSCOMPILING AND CMAKE_SYSTEM_NAME MATCHES "Windows")
+    message(STATUS "Include MinGW64 posix DLLs for installation.")
+    install(FILES
+            /usr/lib/gcc/x86_64-w64-mingw32/8.3-posix/libgcc_s_seh-1.dll
+            /usr/lib/gcc/x86_64-w64-mingw32/8.3-posix/libgomp-1.dll
+            /usr/lib/gcc/x86_64-w64-mingw32/8.3-posix/libstdc++-6.dll
+            DESTINATION bin
+            COMPONENT runtime)
+endif ()
 include(CPackConfig.cmake)
